LU-983 llite: align readahead to 1M after ra_max adjustment

Align the readahead pages only if ria_start != 0, otherwise the
readahead pages will be cut to zero. And it can be checked by
checking (ret > ((ria->ria_start + ret) % PTLRPC_MAX_BRW_PAGES))

Add test_101e for checking small reads for small size files.

Put 101a to Exception list, because it will do random small
reads(64k) on the file, then checking pages being discarded.
But in current implementation, we will always extend small size
read to 1M during read-ahead, which might cause too much unused
pages being read, then being discarded later.

Remove big rpc check in 101c, because the test will do random small
size(64K) read, so it only need make sure there are no small size
RPC during the read. Besides, the original big RPC check is wrong,
since it can not make sure all of RPC exists in this case.

Signed-off-by: Wang Di <di.wang@whamcloud.com>
Change-Id: If86975274f36050b9252304c447f057e99f0c5ea
Reviewed-on: http://review.whamcloud.com/1983
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>